# ai_planett

./: .gitignore  README.md
backend/: .env.example  .gitignore  Dockerfile  README.md  local_chat.db  pyproject.toml  render.yaml
backend/app/: __init__.py  config.py  db.py  guardrails.py  logger.py  main.py  schemas.py
backend/app/agents/: explainer_agent.py  parser_agent.py  router_agent.py  utils.py  verifier_agent.py
backend/app/routers/: history.py
backend/app/services/: kb_updater.py  retrieval.py  vector_store.py
backend/app/tools/: __init__.py  audio.py  dspy_pipeline.py  validator.py  vision.py  web_search.py
backend/app/workflows/: __init__.py  langgraph_pipeline.py
backend/backend/data/: feedback_db.json
backend/data/: knowledge_base.jsonl
backend/docs/: final_proposal.md
backend/mcp_servers/: tavily_server.py
backend/scripts/: build_kb.py  build_weaviate_kb.py
docs/: ARCHITECTURE.md
frontend/: README.md  index.html  package-lock.json  package.json  vercel.json
frontend/src/: App.tsx  index.css  types.ts
frontend/src/components/: ChatInput.tsx  ChatMessage.tsx  ChatSidebar.tsx  ErrorBoundary.tsx  FeedbackSystem.tsx  GenerativeArtScene.tsx
frontend/src/components/ui/: scroll-area.tsx
frontend/src/styles/: globals.css
